[gd_scene load_steps=8 format=3 uid="uid://dye8ygfcvmig0"]

[ext_resource type="Script" uid="uid://clejxby4nxls2" path="res://assets/scripts/new_menu.gd" id="1_0jmf4"]
[ext_resource type="Texture2D" uid="uid://cjejvll72xhdf" path="res://assets/puzzles/new_background.jpg" id="2_1empl"]
[ext_resource type="Texture2D" uid="uid://djl2guwkgu775" path="res://assets/puzzles/AdobeStock_104619688.jpeg" id="2_ae42l"]
[ext_resource type="Theme" uid="uid://0xk2aimn5x6r" path="res://assets/themes/main_menu_buttons.tres" id="3_ro0bn"]
[ext_resource type="FontFile" uid="uid://eiuxkjsrskgd" path="res://assets/fonts/KiriFont.ttf" id="4_6yxl4"]
[ext_resource type="AudioStream" uid="uid://dbjdeh7acychu" path="res://assets/sounds/finger-snap-179180.mp3" id="6_7rt3t"]

[sub_resource type="LabelSettings" id="LabelSettings_75luh"]
font = ExtResource("4_6yxl4")
font_size = 100
font_color = Color(0.941176, 0.67451, 0.0431373, 1)
outline_size = 15
outline_color = Color(0.305882, 0.176471, 0.109804, 1)
shadow_size = 30
shadow_color = Color(0.419608, 0.294118, 0.196078, 1)
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxRenamePopup"]
bg_color = Color(0.07, 0.07, 0.08, 0.92)
border_color = Color(0.44, 0.39, 0.37, 1)
border_width_top = 1
border_width_bottom = 1
border_width_left = 1
border_width_right = 1
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_left = 8
corner_radius_bottom_right = 8
content_margin_left = 16
content_margin_top = 16
content_margin_right = 16
content_margin_bottom = 16

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0jmf4")

[node name="background texture" type="Sprite2D" parent="."]
position = Vector2(1012, 603.125)
scale = Vector2(0.388011, 0.343116)
texture = ExtResource("2_ae42l")

[node name="new background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -93.0
offset_top = -64.0
offset_right = 2124.0
offset_bottom = 1270.0
texture = ExtResource("2_1empl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 600.0
offset_top = 71.0
offset_right = 1353.0
offset_bottom = 850.0
pivot_offset = Vector2(307, 718)
theme_override_constants/separation = 50
alignment = 1

[node name="title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Jigsaw
Puzzle"
label_settings = SubResource("LabelSettings_75luh")
horizontal_alignment = 1

[node name="NicknameLabel" type="Label" parent="VBoxContainer"]
 custom_minimum_size = Vector2(0, 5)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Nickname: "
horizontal_alignment = 1

[node name="select puzzle" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = ExtResource("3_ro0bn")
theme_override_font_sizes/font_size = 50
text = "Single Player"

[node name="PlayOnline" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = ExtResource("3_ro0bn")
theme_override_font_sizes/font_size = 50
text = "Multiplayer"

 [node name="start random" type="Button" parent="VBoxContainer"]
 custom_minimum_size = Vector2(0, 100)
 layout_mode = 2
 theme = ExtResource("3_ro0bn")
 theme_override_font_sizes/font_size = 50
 text = "Start Random Game"

[node name="BottomRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="quit" type="Button" parent="VBoxContainer/BottomRow"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_ro0bn")
theme_override_font_sizes/font_size = 45
text = "Quit Game"

[node name="ChangeNickname" type="Button" parent="VBoxContainer/BottomRow"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_ro0bn")
theme_override_font_sizes/font_size = 35
text = "Change Nickname"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_7rt3t")

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 25.0
offset_top = 19.0
offset_right = 220.0
offset_bottom = 101.0
theme_override_font_sizes/font_size = 50
text = "Debug"

[node name="RenamePopup" type="PopupPanel" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -140.0
offset_right = 280.0
offset_bottom = 140.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxRenamePopup")
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="RenamePopup"]
alignment = 1
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="RenamePopup/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Enter your new nickname"
horizontal_alignment = 1

[node name="NicknameLineEdit" type="LineEdit" parent="RenamePopup/VBoxContainer"]
placeholder_text = "New nickname"

[node name="ButtonRow" type="HBoxContainer" parent="RenamePopup/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 12

[node name="SaveButton" type="Button" parent="RenamePopup/VBoxContainer/ButtonRow"]
custom_minimum_size = Vector2(130, 52)
theme = ExtResource("3_ro0bn")
text = "Save"

[node name="CancelButton" type="Button" parent="RenamePopup/VBoxContainer/ButtonRow"]
custom_minimum_size = Vector2(130, 52)
theme = ExtResource("3_ro0bn")
text = "Cancel"

[connection signal="pressed" from="VBoxContainer/BottomRow/ChangeNickname" to="." method="_on_change_nickname_pressed"]
[connection signal="pressed" from="VBoxContainer/BottomRow/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="RenamePopup/VBoxContainer/ButtonRow/SaveButton" to="." method="_on_rename_save_pressed"]
[connection signal="pressed" from="RenamePopup/VBoxContainer/ButtonRow/CancelButton" to="." method="_on_rename_cancel_pressed"]
[connection signal="text_submitted" from="RenamePopup/NicknameLineEdit" to="." method="_on_nickname_line_edit_text_submitted"]
[connection signal="pressed" from="VBoxContainer/select puzzle" to="." method="_on_select_puzzle_pressed"]
[connection signal="pressed" from="VBoxContainer/PlayOnline" to="." method="_on_play_online_pressed"]
[connection signal="pressed" from="VBoxContainer/start random" to="." method="_on_start_random_pressed"]
